--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,21 @@
 
 h1 {
     text-align: center;
+    font-size: 3rem;
 
+}
+
+h2 {
+    font-size: 2rem;
+
+}
+
+h4 {
+    font-size: 17px;
+}
+
+p {
+    font-size: 17px;
 }
 
 .box-container h2 {
@@ -151,8 +165,22 @@ h3 {
         color: red;
     }
 
-    img {
-        max-width: 400px;
-        padding: 0rem
+    .association img {
+        max-width: 200px;
+        margin: 0rem;
+        padding: 0rem;
     }
+
+    .association {
+        margin-left: 2rem;
+        padding-left: 0%;
+        text-align: center;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+
+
+
 }
